CI/hes-events-spontaneous-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hes-events-spontaneous-api
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
  selector:
   matchLabels:
     app: hes-events-spontaneous-api
     microservice-type: webapi
  template:
    metadata:
      labels:
        app: hes-events-spontaneous-api
        microservice-type: webapi
    spec:
      serviceAccountName: hes-events-spontaneous-api
      imagePullSecrets:
      - name: containerregistryprodsecret
      containers:
      - name: hes-events-spontaneous-api
        image: containerregistryprod.azurecr.io/hes-events-spontaneous-api:imagetag
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 125Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
kind: Service
apiVersion: v1
metadata:
  name: hes-events-spontaneous-api
spec:
  selector:
    app: hes-events-spontaneous-api
  ports:
  - name: hes-events-spontaneous-api
    port: 80
