CI/ingress.dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hes-events-response-api
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: hesextensionsapi.dev-hafslundnett.io
    http:
      paths:
      - path: /events
        backend:
          serviceName: hes-events-response-api
          servicePort: 80
